--- a/Tinder/Tinder/DraggableImageView.xib
+++ b/Tinder/Tinder/DraggableImageView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -12,12 +12,13 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+        <view clipsSubviews="YES" contentMode="scaleToFill" id="iN0-l3-epB">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4l3-CG-GE2">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                <imageView clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="4l3-CG-GE2">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <gestureRecognizers/>
                     <connections>
                         <outletCollection property="gestureRecognizers" destination="ZXk-8O-bGh" appends="YES" id="Ka0-dm-hox"/>
@@ -25,13 +26,7 @@
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-            <constraints>
-                <constraint firstAttribute="bottom" secondItem="4l3-CG-GE2" secondAttribute="bottom" id="NhZ-dI-IgE"/>
-                <constraint firstItem="4l3-CG-GE2" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="a2a-bM-uxN"/>
-                <constraint firstItem="4l3-CG-GE2" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="ciA-oM-lMK"/>
-                <constraint firstAttribute="trailing" secondItem="4l3-CG-GE2" secondAttribute="trailing" id="iIr-ZJ-uja"/>
-            </constraints>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="239" y="239"/>
         </view>
         <panGestureRecognizer minimumNumberOfTouches="1" id="ZXk-8O-bGh">
             <connections>
